--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Hello Git</h1>
-        <p>No Image</p>
+        <img src="img.jpg" alt="">
+        <p>Yes Image</p>
     </body>
 </html>
